--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>pms</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="bg-stone-50">
+    <div class="modal-root">
+
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
